dataset/local/df_check_nogpgcheck/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "yum install -y wget"
        PrependShell: true
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: RUN
        CmdLine:
          - "yum install --nogpgcheck -y vim"
        PrependShell: true
